## user_interface.py

from typing import Dict
from linkedin_integration import LinkedInIntegration
from openai_integration import OpenAIIntegration
from database import Database
from security import Security

class UserInterface:
    """Handles the user interface for displaying dashboards, editing applications, and showing application status."""

    def __init__(self, linkedin_client_id: str, linkedin_client_secret: str, linkedin_redirect_uri: str,
                 openai_api_key: str, encryption_key: bytes = None):
        """Initializes the UserInterface with necessary integrations and security.

        Args:
            linkedin_client_id (str): LinkedIn client ID for OAuth.
            linkedin_client_secret (str): LinkedIn client secret for OAuth.
            linkedin_redirect_uri (str): Redirect URI for LinkedIn OAuth.
            openai_api_key (str): API key for OpenAI.
            encryption_key (bytes): Encryption key for securing data. If not provided, a new key is generated.
        """
        self.linkedin_integration = LinkedInIntegration(linkedin_client_id, linkedin_client_secret, linkedin_redirect_uri)
        self.openai_integration = OpenAIIntegration(openai_api_key)
        self.database = Database()
        self.security = Security(encryption_key)

    def display_dashboard(self) -> None:
        """Displays the user dashboard."""
        print("Welcome to the LinkedIn Easy Apply Dashboard!")
        # Additional dashboard logic can be implemented here

    def edit_application(self, application_data: Dict) -> Dict:
        """Allows the user to edit the application data.

        Args:
            application_data (Dict): The current application data.

        Returns:
            Dict: The edited application data.
        """
        # Simulate editing process
        print("Editing application data...")
        # Here you can add logic to modify the application_data as needed
        return application_data

    def show_application_status(self) -> None:
        """Displays the status of the user's job applications."""
        job_id = input("Enter the job ID to check the application status: ")
        status = self.database.retrieve_application_status(job_id)
        if status:
            print(f"Application Status for Job ID {job_id}: {status}")
        else:
            print("No application found for the provided job ID.")

    def run_application_process(self, job_id: str, job_description: str) -> None:
        """Runs the complete application process from authentication to application submission.

        Args:
            job_id (str): The job ID to apply for.
            job_description (str): The job description for generating application content.
        """
        if self.linkedin_integration.authenticate():
            profile_data = self.linkedin_integration.fetch_profile_data()
            application_content = self.openai_integration.generate_content(profile_data, job_description)
            edited_application = self.edit_application(application_content)
            encrypted_data = self.security.encrypt_data(edited_application)
            if self.linkedin_integration.apply_to_job(job_id, encrypted_data):
                self.database.store_application_data(encrypted_data)
                print("Application submitted successfully!")
            else:
                print("Failed to submit the application.")
        else:
            print("Authentication failed. Please try again.")
